--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,15 +64,20 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-android-compiler:2.38.1"
 
-    def lifecycle_version = "2.5.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    //coroutine dependency
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1")
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+
+    //Live Data
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+
+    implementation 'androidx.fragment:fragment-ktx:1.5.3'
 
     //Pagination
 //    implementation "androidx.paging:paging-runtime:3.1.1"
 
     //share preference
-    implementation 'androidx.preference:preference-ktx:1.2.0'
+//    implementation 'androidx.preference:preference-ktx:1.2.0'
 }
 kapt {
     correctErrorTypes = true
