--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,8 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     buildFeatures {
-        dataBinding  true
+        dataBinding true
+        viewBinding true
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -43,6 +44,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -73,9 +75,23 @@ dependencies {
 
     implementation 'androidx.fragment:fragment-ktx:1.5.3'
 
-    //Pagination
-//    implementation "androidx.paging:paging-runtime:3.1.1"
+    implementation "com.jakewharton.timber:timber:4.7.1"
 
+//================================ NARUTO ============================================================
+    //Pagination
+    def paging_version = "3.0.1"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+
+    // webView
+    implementation "androidx.browser:browser:1.3.0"
+
+    // Navigation components
+    def nav_version = "2.4.0-alpha01"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
+//====================== NARUTO =======================================================================
     //share preference
 //    implementation 'androidx.preference:preference-ktx:1.2.0'
 }
