--- a/build.gradle
+++ b/build.gradle
@@ -6,18 +6,17 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0'
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
+        classpath 'com.android.tools.build:gradle:8.6.0'  //7.2.0
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.48.1"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
 plugins {
-    id 'com.android.application' version '7.2.0' apply false
-    id 'com.android.library' version '7.2.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id 'com.android.application' version '8.3.1' apply false  //7.2.0
+    id 'com.android.library' version '8.3.1' apply false  //7.2.0
+    id 'org.jetbrains.kotlin.android' version '1.9.24' apply false  //1.6.21
 }
 
 task clean(type: Delete) {
